# lingua-fork

./: .gitignore  CLAUDE.md  README.md  cluster.sh  pyproject.toml
apps/cpt/: convert_hf_to_dcp.py  cpt_ckpt_utils.py
apps/fastRNN/hawk/: hawk.py
apps/fastRNN/minGRU/: mingru.py
apps/fastRNN/minLSTM/: minlstm.py
apps/main/: eval.py  generate.py  train.py  transformer.py
apps/main/configs/: base.yaml  debug.yaml  default.yaml  llama_1B_16H200.yaml  llama_1B_24H200.yaml  llama_1B_48G.yaml  llama_1B_48Gx4-32acc.yaml  llama_1B_48Gx4.yaml  llama_1B_8H100_cpt.yaml  llama_1B_8H200.yaml  llama_280M_48G_1.yaml  llama_280M_48G_2.yaml  llama_280M_8H200.yaml  llama_7B_8H200.yaml  llama_8H200_chinchilla.yaml  llama_data_selection_test.yaml  miso_16.slurm  miso_24.slurm  miso_8.slurm  miso_8_silent.slurm  posembed_sweep.yaml  preemptible_1.slurm  preemptible_4.slurm  scaling.yaml  sphinx_1.slurm
apps/main/configs/scaling/: scale_120m.yaml  scale_240m.yaml  scale_30m.yaml  scale_60m.yaml
apps/mamba/: mamba.py
apps/mtp/: train.py
lingua/: checkpoint.py  cluster.py  data.py  distributed.py  metrics.py  optim.py  stool.py  tokenizer.py  transformer.py
scripts/: chinchilla_scaling.py  data_ablations.py  launch.py  launch_scaling.sh  lr_sweep.sh  lr_sweep_llama_1b_cpt.sh  randomize_tests.py  run.sh
scripts/jobs/: stanford_miso.sh  stanford_sphinx.sh  together_secure.sh  together_turbo.sh
setup/: create_env.sh  download_prepare_hf_data.py  download_prepare_pretrained_ckpts.sh
