[project]
name = "lingua-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "blobfile>=3.0.0",
    "datatrove>=0.6.0",
    "fsspec>=2025.3.0",
    "lm-eval>=0.4.9",
    "msgspec>=0.19.0",
    "numpy>=2.2",
    "omegaconf>=2.3.0",
    "orjson>=3.11.2",
    "pynvml>=12.0.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.11.0",
    "torch==2.7.1",
    "viztracer>=1.0.4",
    "wandb>=0.21.1",
    "xformers",
]
